# back/cmd/docs/swagger.yaml
@@ -54,38 +54,6 @@ paths:
       summary: Get user
       tags:
       - user
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: user login
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserLogin'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully login user
-          schema:
-            type: integer
-        "400":
-          description: Invalid input
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal server error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Login user
-      tags:
-      - user
   /user/create:
     post:
       consumes:
@@ -117,6 +85,39 @@ paths:
               type: string
             type: object
       summary: Create user
+      tags:
+      - user
+  /user/login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: user login
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.UserLogin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully login user
+          schema:
+            type: integer
+        "400":
+          description: Invalid input
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Login user
       tags:
       - user
 swagger: "2.0"
